--- a/templates/base.html
+++ b/templates/base.html
@@ -2,53 +2,54 @@
 <!doctype html>
 <html lang="en">
 <head>
-
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{% block title %}Dingo{% endblock %}</title>
-
+    <title>Dingo</title>
     <link rel="icon" href="{% static 'img/favicon.png' %}">
-
-    <!-- CSS Files -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!-- animate CSS -->
     <link rel="stylesheet" href="{% static 'css/animate.css' %}">
+    <!-- owl carousel CSS -->
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <!-- themify CSS -->
     <link rel="stylesheet" href="{% static 'css/themify-icons.css' %}">
+    <!-- flaticon CSS -->
     <link rel="stylesheet" href="{% static 'css/flaticon.css' %}">
+    <!-- font awesome CSS -->
     <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+    <!-- swiper CSS -->
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/gijgo.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
     <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- style CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
-    {% block extra_head %}{% endblock %}
-
-</head>
 
 <body>
 
-    {% include 'partials/header.html' %}
+{% include 'partials/header.html' %}
 
-    {% block content %}
-    {% endblock content %}
+{% block content %}
+{% endblock content %}
 
-    {% include 'partials/footer.html' %}
+{% include 'partials/footer.html' %}
 
-    <!-- JS Files -->
-    <script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
-    <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
-    <script src="{% static 'js/swiper.min.js' %}"></script>
-    <script src="{% static 'js/masonry.pkgd.js' %}"></script>
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/slick.min.js' %}"></script>
-    <script src="{% static 'js/gijgo.min.js' %}"></script>
-    <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
-    <script src="{% static 'js/custom.js' %}"></script>
+<!-- JS Files -->
+<script src="{% static 'js/jquery-1.12.1.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/jquery.magnific-popup.js' %}"></script>
+<script src="{% static 'js/swiper.min.js' %}"></script>
+<script src="{% static 'js/masonry.pkgd.js' %}"></script>
+<script src="{% static 'js/owl.carousel.min.js' %}"></script>
+<script src="{% static 'js/slick.min.js' %}"></script>
+<script src="{% static 'js/gijgo.min.js' %}"></script>
+<script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+<script src="{% static 'js/custom.js' %}"></script>
 
-    {% block extra_scripts %}{% endblock %}
+{% block extra_scripts %}{% endblock %}
 
 </body>
 </html>
