--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,48 +1,48 @@
 {% load static %}
-<header class="main_menu">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-12">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <a class="navbar-brand" href="{% url 'website:index' %}">
-                        <img src="{% static 'img/logo.png' %}" alt="logo">
-                    </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+<header class="main_menu home_menu">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="{% url 'website:index' %}"> <img src="{% static 'img/logo.png' %}" alt="logo"> </a>
+                        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
 
-                    <div class="collapse navbar-collapse main-menu-item justify-content-end"
-                        id="navbarSupportedContent">
-                        <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="{% url 'website:index' %}">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="{% url 'website:about' %}">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Chefs</a></li>
-
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Blog
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="#">Blog</a>
-                                    <a class="dropdown-item" href="#">Single blog</a>
-                                    <a class="dropdown-item" href="#">Elements</a>
-                                </div>
-                            </li>
-
-                            <li class="nav-item"><a class="nav-link" href="{% url 'website:contact' %}">Contact</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="menu_btn">
-                        <a href="#" class="single_page_btn d-none d-sm-block">book a table</a>
-                    </div>
-
-                </nav>
+                        <div class="navbar-collapse main-menu-item justify-content-end collapse" id="navbarSupportedContent" style="">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'website:index' %}">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'website:about' %}">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Menu</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Chefs</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Blog
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <a class="dropdown-item" href="#">Blog</a>
+                                        <a class="dropdown-item" href="#">Single blog</a>
+                                        <a class="dropdown-item" href="#">Elements</a>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'website:contact' %}">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="menu_btn">
+                            <a href="#" class="btn_1 d-none d-sm-block">book a tabel</a>
+                        </div>
+                    </nav>
+                </div>
             </div>
         </div>
-    </div>
-</header>
+    </header>
