--- a/templates/website/elements.html
+++ b/templates/website/elements.html
@@ -1,10 +1,7 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
-
-<body>
-
-	
 	<!-- breadcrumb start-->
     <section class="breadcrumb breadcrumb_bg">
         <div class="container">
@@ -619,11 +616,3 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
-	<!-- End Align Area -->
-
-</body>
-	
-	</html>
