--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -1,8 +1,6 @@
-<!doctype html>
-<html lang="en">
-
-
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
 
     <!-- breadcrumb start-->
     <section class="breadcrumb breadcrumb_bg">
@@ -29,7 +27,7 @@
                     <div class="blog_left_sidebar">
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_1.png" alt="">
+                                <img class="card-img rounded-0" src="{% static img/blog/single_blog_1.png' %}" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -51,7 +49,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_2.png" alt="">
+                                <img class="card-img rounded-0" src="{% static img/blog/single_blog_2.png' %}" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -73,7 +71,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_3.png" alt="">
+                                <img class="card-img rounded-0" src="{% static img/blog/single_blog_3.png' %}" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -95,7 +93,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_4.png" alt="">
+                                <img class="card-img rounded-0" src="{% static img/blog/single_blog_4.png' %}" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -117,7 +115,7 @@
 
                         <article class="blog_item">
                             <div class="blog_item_img">
-                                <img class="card-img rounded-0" src="img/blog/single_blog_5.png" alt="">
+                                <img class="card-img rounded-0" src="{% static img/blog/single_blog_5.png' %}" alt="">
                                 <a href="#" class="blog_item_date">
                                     <h3>15</h3>
                                     <p>Jan</p>
@@ -223,7 +221,7 @@
                         <aside class="single_sidebar_widget popular_post_widget">
                             <h3 class="widget_title">Recent Post</h3>
                             <div class="media post_item">
-                                <img src="img/post/post_1.png" alt="post">
+                                <img src="{% static img/post/post_1.png' %}" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
                                         <h3>From life was you fish...</h3>
@@ -232,7 +230,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/post/post_2.png" alt="post">
+                                <img src="{% static img/post/post_2.png' %}" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
                                         <h3>The Amazing Hubble</h3>
@@ -241,7 +239,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/post/post_3.png" alt="post">
+                                <img src="{% static img/post/post_3.png' %}" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
                                         <h3>Astronomy Or Astrology</h3>
@@ -250,7 +248,7 @@
                                 </div>
                             </div>
                             <div class="media post_item">
-                                <img src="img/post/post_4.png" alt="post">
+                                <img src="{% static img/post/post_4.png' %}" alt="post">
                                 <div class="media-body">
                                     <a href="single-blog.html">
                                         <h3>Asteroids telescope</h3>
@@ -295,32 +293,32 @@
                             <ul class="instagram_row flex-wrap">
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_5.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_5.png' %}" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_6.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_6.png' %}" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_7.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_7.png' %}" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_8.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_8.png' %}" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_9.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_9.png' %}" alt="">
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <img class="img-fluid" src="img/post/post_10.png" alt="">
+                                        <img class="img-fluid" src="{% static img/post/post_10.png' %}" alt="">
                                     </a>
                                 </li>
                             </ul>
@@ -346,6 +344,4 @@
     </section>
     <!--================Blog Area =================-->
 
-    </body>
-    
-    </html>
+{% endblock %}
