--- a/templates/website/about.html
+++ b/templates/website/about.html
@@ -24,7 +24,7 @@
             <div class="row align-items-center">
                 <div class="col-sm-4 col-lg-5 offset-lg-1">
                     <div class="about_img">
-                        <img src="img/about.png" alt="">
+                        <img src="{% static 'img/about.png' %}" alt="">
                     </div>
                 </div>
                 <div class="col-sm-8 col-lg-4">
@@ -36,13 +36,14 @@
                         <p>May over was. Be signs two. Spirit. Brought said dry own firmament lesser best sixth deep
                             abundantly bearing, him, gathering you
                             blessed bearing he our position best ticket in month hole deep </p>
-                        <a href="#" class="btn_3">Read More <img src="img/icon/left_2.svg" alt=""></a>
+                        <a href="#" class="btn_3">Read More <img src="{% static 'img/icon/left_2.svg' %}" alt=""></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- about part end-->
+
     <!--::review_part start::-->
     <section class="review_part gray_bg section_padding">
         <div class="container">
@@ -59,7 +60,7 @@
                     <div class="client_review_part owl-carousel">
                         <div class="client_review_single media">
                             <div class="client_img align-self-center">
-                                <img src="img/client/client_1.png" alt="">
+                                <img src="{% static 'img/client/client_1.png' %}" alt="">
                             </div>
                             <div class="client_review_text media-body">
                                 <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
@@ -71,7 +72,7 @@
                         </div>
                         <div class="client_review_single media">
                             <div class="client_img align-self-center">
-                                <img src="img/client/client_1.png " alt="">
+                                <img src="{% static 'img/client/client_1.png ' %}" alt="">
                             </div>
                             <div class="client_review_text media-body">
                                 <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
@@ -83,7 +84,7 @@
                         </div>
                         <div class="client_review_single media">
                             <div class="client_img align-self-center">
-                                <img src="img/client/client_1.png" alt="">
+                                <img src="{% static 'img/client/client_1.png' %}" alt="">
                             </div>
                             <div class="client_review_text media-body">
                                 <p>Also made from. Give may saying meat there from heaven it lights face had is gathered
@@ -99,6 +100,7 @@
         </div>
     </section>
     <!--::review_part end::-->
+
     <!--::chefs_part start::-->
     <section class="chefs_part blog_item_section section_padding">
         <div class="container">
@@ -114,7 +116,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_blog_item">
                         <div class="single_blog_img">
-                            <img src="img/team/chefs_1.png" alt="">
+                            <img src="{% static 'img/team/chefs_1.png' %}" alt="">
                         </div>
                         <div class="single_blog_text text-center">
                             <h3>Adam Billiard</h3>
@@ -131,7 +133,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_blog_item">
                         <div class="single_blog_img">
-                            <img src="img/team/chefs_2.png" alt="">
+                            <img src="{% static 'img/team/chefs_2.png' %}" alt="">
                         </div>
                         <div class="single_blog_text text-center">
                             <h3>Fred Macyard</h3>
@@ -148,7 +150,7 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="single_blog_item">
                         <div class="single_blog_img">
-                            <img src="img/team/chefs_3.png" alt="">
+                            <img src="{% static 'img/team/chefs_3.png' %}" alt="">
                         </div>
                         <div class="single_blog_text text-center">
                             <h3>Justin Stuard</h3>
@@ -165,7 +167,7 @@
                 <div class="col-sm-6 col-lg-4 d-none d-sm-block d-lg-none">
                     <div class="single_blog_item">
                         <div class="single_blog_img">
-                            <img src="img/team/chefs_1.png" alt="">
+                            <img src="{% static 'img/team/chefs_1.png' %}" alt="">
                         </div>
                         <div class="single_blog_text text-center">
                             <h3>Justin Stuard</h3>
