blog-home 70% add

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -28,8 +28,8 @@
                                         Blog
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                        <a class="dropdown-item" href="#">Blog</a>
-                                        <a class="dropdown-item" href="#">Single blog</a>
+                                        <a class="dropdown-item" href="{% url 'blog:index' %}">Blog</a>
+                                        <a class="dropdown-item" href="{% url 'blog:single' %}">Single blog</a>
                                         <a class="dropdown-item" href="#">Elements</a>
                                     </div>
                                 </li>
