--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -38,13 +38,17 @@
                 <div class="single-footer-widget footer_3">
                     <h4>Newsletter</h4>
                     <p>Heaven fruitful doesn't over lesser in days. Appear creeping seas</p>
-                    <form action="#">
+                    <form action="{% url 'website:newsletter' %}" method="post">
+                        {% csrf_token %}
                         <div class="form-group">
                             <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Email Address"
-                                       onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address'">
+                                <input type="email" name="email" class="form-control"
+                                       placeholder="Email Address"
+                                       required>
                                 <div class="input-group-append">
-                                    <button class="btn" type="button"><i class="fas fa-paper-plane"></i></button>
+                                    <button class="btn" type="submit">
+                                        <i class="fas fa-paper-plane"></i>
+                                    </button>
                                 </div>
                             </div>
                         </div>
