--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -153,7 +153,7 @@
                 <div class="col-lg-6">
                     <div class="nav nav-tabs food_menu_nav" id="myTab" role="tablist">
                         <a class="active" id="Special-tab" data-toggle="tab" href="#Special" role="tab"
-                            aria-controls="Special" aria-selected="false">Special <img src="{% static 'img/icon/play.svg"
+                            aria-controls="Special" aria-selected="false">Special <img src="{% static 'img/icon/play.svg' %}"
                                 alt="play"></a>
                         <a id="Breakfast-tab" data-toggle="tab" href="#Breakfast" role="tab" aria-controls="Breakfast"
                             aria-selected="false">Breakfast <img src="{% static 'img/icon/play.svg' %}" alt="play"></a>
