--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="blog_details">
-                            <a class="d-inline-block" href="{% url 'blog:single' %}">
+                            <a class="d-inline-block" href="{% url 'blog:single' post.id %}">
                                 <h2>{{ post.title }}</h2>
                             </a>
 
