--- a/templates/blog/sidebar/instagram.html
+++ b/templates/blog/sidebar/instagram.html
@@ -1,36 +1,14 @@
 {% load static %}
 <aside class="single_sidebar_widget instagram_feeds">
-                        <h4 class="widget_title">Instagram Feeds</h4>
-                        <ul class="instagram_row flex-wrap">
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_5.png' %}" alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_6.png' %}" alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_7.png' %}" alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_8.png' %}" alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_9.png' %}" alt="">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img class="img-fluid" src="{% static 'img/post/post_10.png' %}" alt="">
-                                </a>
-                            </li>
-                        </ul>
-                    </aside>
+    <h4 class="widget_title">Instagram Feeds</h4>
+
+    <ul class="instagram_row flex-wrap">
+        {% for post in posts %}
+        <li>
+            <a href="{% url 'blog:single' post.id %}">
+                <img class="img-fluid" src="{{ post.image.url }}" alt="{{ post.title }}">
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
+</aside>
