--- a/templates/blog/sidebar/search.html
+++ b/templates/blog/sidebar/search.html
@@ -1,13 +1,13 @@
 {% load static %}
 <aside class="single_sidebar_widget search_widget">
-    <form action="#">
+    <form action="{% url 'blog:search' %}" method="get">
         <div class="form-group">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder='Search Keyword'
-                       onfocus="this.placeholder = ''"
-                       onblur="this.placeholder = 'Search Keyword'">
+                <input name="q" type="text" class="form-control" placeholder="Search Keyword"
+                       onfocus="this.placeholder=''"
+                       onblur="this.placeholder='Search Keyword'">
                 <div class="input-group-append">
-                    <button class="btn" type="button"><i class="ti-search"></i></button>
+                    <button class="btn" type="submit"><i class="ti-search"></i></button>
                 </div>
             </div>
         </div>
