--- a/templates/blog/single-blog.html
+++ b/templates/blog/single-blog.html
@@ -128,7 +128,7 @@
                     <div class="media align-items-center">
                         <img src="{% static 'img/blog/author.png' %}" alt="">
                         <div class="media-body">
-                            <a href="#">
+                            <a href="{% url 'blog:author' post.author.username %}">
                                 <h4>{{ post.author }}</h4>
                             </a>
                             <p>Second divided from form fish beast made. Every of seas all gathered use saying you're,
@@ -138,7 +138,9 @@
                     </div>
                 </div>
                 <div class="comments-area">
-                    <h4>05 Comments</h4>
+                    <h4>{{ comments.count }} Comments</h4>
+
+                    {% for comment in comments %}
                     <div class="comment-list">
                         <div class="single-comment justify-content-between d-flex">
                             <div class="user justify-content-between d-flex">
@@ -147,16 +149,14 @@
                                 </div>
                                 <div class="desc">
                                     <p class="comment">
-                                        Multiply sea night grass fourth day sea lesser rule open subdue female fill
-                                        which them
-                                        Blessed, give fill lesser bearing multiply sea night grass fourth day sea lesser
+                                        {{ comment.message }}
                                     </p>
                                     <div class="d-flex justify-content-between">
                                         <div class="d-flex align-items-center">
                                             <h5>
-                                                <a href="#">Emilly Blunt</a>
+                                                <a href="#">{{ comment.name }}</a>
                                             </h5>
-                                            <p class="date">December 4, 2017 at 3:12 pm </p>
+                                            <p class="date">{{ comment.created_date|date:"F j, Y \a\t H:i" }}</p>
                                         </div>
                                         <div class="reply-btn">
                                             <a href="#" class="btn-reply text-uppercase">reply</a>
@@ -166,89 +166,42 @@
                             </div>
                         </div>
                     </div>
-                    <div class="comment-list">
-                        <div class="single-comment justify-content-between d-flex">
-                            <div class="user justify-content-between d-flex">
-                                <div class="thumb">
-                                    <img src="{% static 'img/comment/comment_2.png' %}" alt="">
-                                </div>
-                                <div class="desc">
-                                    <p class="comment">
-                                        Multiply sea night grass fourth day sea lesser rule open subdue female fill
-                                        which them
-                                        Blessed, give fill lesser bearing multiply sea night grass fourth day sea lesser
-                                    </p>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <h5>
-                                                <a href="#">Emilly Blunt</a>
-                                            </h5>
-                                            <p class="date">December 4, 2017 at 3:12 pm </p>
-                                        </div>
-                                        <div class="reply-btn">
-                                            <a href="#" class="btn-reply text-uppercase">reply</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="comment-list">
-                        <div class="single-comment justify-content-between d-flex">
-                            <div class="user justify-content-between d-flex">
-                                <div class="thumb">
-                                    <img src="{% static 'img/comment/comment_3.png' %}" alt="">
-                                </div>
-                                <div class="desc">
-                                    <p class="comment">
-                                        Multiply sea night grass fourth day sea lesser rule open subdue female fill
-                                        which them
-                                        Blessed, give fill lesser bearing multiply sea night grass fourth day sea lesser
-                                    </p>
-                                    <div class="d-flex justify-content-between">
-                                        <div class="d-flex align-items-center">
-                                            <h5>
-                                                <a href="#">Emilly Blunt</a>
-                                            </h5>
-                                            <p class="date">December 4, 2017 at 3:12 pm </p>
-                                        </div>
-                                        <div class="reply-btn">
-                                            <a href="#" class="btn-reply text-uppercase">reply</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% empty %}
+                    <p>No comments yet.</p>
+                    {% endfor %}
                 </div>
+
                 <div class="comment-form">
                     <h4>Leave a Reply</h4>
-                    <form class="form-contact comment_form" action="#" id="commentForm">
+                    <form class="form-contact comment_form" action="" method="post">
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-12">
                                 <div class="form-group">
-                              <textarea class="form-control w-100" name="comment" id="comment" cols="30" rows="9"
-                                        placeholder="Write Comment"></textarea>
+                    <textarea class="form-control w-100" name="comment" cols="30" rows="9"
+                              placeholder="Write Comment"></textarea>
                                 </div>
                             </div>
+
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input class="form-control" name="name" id="name" type="text" placeholder="Name">
+                                    <input class="form-control" name="name" type="text" placeholder="Name">
                                 </div>
                             </div>
+
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input class="form-control" name="email" id="email" type="email"
-                                           placeholder="Email">
+                                    <input class="form-control" name="email" type="email" placeholder="Email">
                                 </div>
                             </div>
+
                             <div class="col-12">
                                 <div class="form-group">
-                                    <input class="form-control" name="website" id="website" type="text"
-                                           placeholder="Website">
+                                    <input class="form-control" name="subject" type="text" placeholder="Subject">
                                 </div>
                             </div>
                         </div>
+
                         <div class="form-group">
                             <button type="submit" class="button button-contactForm">Send Message</button>
                         </div>
