--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -18,10 +18,10 @@
                                     <a class="nav-link" href="{% url 'website:about' %}">About</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Menu</a>
+                                    <a class="nav-link" href="{% url 'food:menu' %}">Menu</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Chefs</a>
+                                    <a class="nav-link" href="{% url 'food:chefs' %}">Chefs</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'blog:index' %}">Blog</a>
