--- a/templates/food/chefs.html
+++ b/templates/food/chefs.html
@@ -2,125 +2,106 @@
 {% load static %}
 {% block content %}
 
-    <!-- breadcrumb start-->
-    <section class="breadcrumb breadcrumb_bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="breadcrumb_iner text-center">
-                        <div class="breadcrumb_iner_item">
-                            <h2>Experienced Chefs</h2>
-                        </div>
+<!-- breadcrumb start-->
+<section class="breadcrumb breadcrumb_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="breadcrumb_iner text-center">
+                    <div class="breadcrumb_iner_item">
+                        <h2>Experienced Chefs</h2>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- breadcrumb start-->
+    </div>
+</section>
+<!-- breadcrumb start-->
 
-    <!--::chefs_part start::-->
-    <section class="chefs_part blog_item_section section_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-5">
-                    <div class="section_tittle">
-                        <p>Team Member</p>
-                        <h2>Our Experience Chefs</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-lg-4">
-                    <div class="single_blog_item">
-                        <div class="single_blog_img">
-                            <img src="{% static 'img/team/chefs_1.png' %}" alt="">
-                        </div>
-                        <div class="single_blog_text text-center">
-                            <h3>Adam Billiard</h3>
-                            <p>Chef Master</p>
-                            <div class="social_icon">
-                                <a href="#"> <i class="ti-facebook"></i> </a>
-                                <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                                <a href="#"> <i class="ti-instagram"></i> </a>
-                                <a href="#"> <i class="ti-skype"></i> </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="single_blog_item">
-                        <div class="single_blog_img">
-                            <img src="{% static 'img/team/chefs_2.png' %}" alt="">
-                        </div>
-                        <div class="single_blog_text text-center">
-                            <h3>Fred Macyard</h3>
-                            <p>Chef Master</p>
-                            <div class="social_icon">
-                                <a href="#"> <i class="ti-facebook"></i> </a>
-                                <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                                <a href="#"> <i class="ti-instagram"></i> </a>
-                                <a href="#"> <i class="ti-skype"></i> </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="single_blog_item">
-                        <div class="single_blog_img">
-                            <img src="{% static 'img/team/chefs_3.png' %}" alt="">
-                        </div>
-                        <div class="single_blog_text text-center">
-                            <h3>Justin Stuard</h3>
-                            <p>Chef Master</p>
-                            <div class="social_icon">
-                                <a href="#"> <i class="ti-facebook"></i> </a>
-                                <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                                <a href="#"> <i class="ti-instagram"></i> </a>
-                                <a href="#"> <i class="ti-skype"></i> </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4 d-none d-sm-block d-lg-none">
-                    <div class="single_blog_item">
-                        <div class="single_blog_img">
-                            <img src="{% static 'img/team/chefs_1.png' %}" alt="">
-                        </div>
-                        <div class="single_blog_text text-center">
-                            <h3>Justin Stuard</h3>
-                            <p>Chef Master</p>
-                            <div class="social_icon">
-                                <a href="#"> <i class="ti-facebook"></i> </a>
-                                <a href="#"> <i class="ti-twitter-alt"></i> </a>
-                                <a href="#"> <i class="ti-instagram"></i> </a>
-                                <a href="#"> <i class="ti-skype"></i> </a>
-                            </div>
-                        </div>
-                    </div>
+<!--::chefs_part start::-->
+<section class="chefs_part blog_item_section section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-5">
+                <div class="section_tittle">
+                    <p>Team Member</p>
+                    <h2>Our Experience Chefs</h2>
                 </div>
             </div>
         </div>
-    </section>
-    <!--::chefs_part end::-->
+        <div class="row">
+            {% for chef in chefs %}
+            <div class="col-sm-6 col-lg-4">
+                <div class="single_blog_item">
+                    <div class="single_blog_img">
+                        <img src="{{ chef.image.url }}" alt="">
+                    </div>
+                    <div class="single_blog_text text-center">
+                        <h3>{{chef.name}}</h3>
+                        <p>{{chef.title}}</p>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <nav class="blog-pagination justify-content-center d-flex">
+            <ul class="pagination">
 
-    <!-- intro_video_bg start-->
-    <section class="intro_video_bg">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro_video_iner text-center">
-                        <h2>Expect The Best</h2>
-                        <div class="intro_video_icon">
-                            <a id="play-video_1" class="video-play-button popup-youtube"
-                                href="https://www.youtube.com/watch?v=pBFQdxA-apI">
-                                <span class="ti-control-play"></span>
-                            </a>
-                        </div>
+                {# دکمه قبلی #}
+                {% if page_obj.has_previous %}
+                <li class="page-item">
+                    <a class="page-link"
+                       href="{% url 'food:chefs_page' page_obj.previous_page_number %}">
+                        <i class="ti-angle-left"></i>
+                    </a>
+                </li>
+                {% endif %}
+
+                {# شماره صفحات #}
+                {% for num in page_obj.paginator.page_range %}
+                <li class="page-item {% if page_obj.number == num %}active{% endif %}">
+                    <a class="page-link"
+                       href="{% url 'food:chefs_page' num %}">
+                        {{ num }}
+                    </a>
+                </li>
+                {% endfor %}
+
+                {# دکمه بعدی #}
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link"
+                       href="{% url 'food:chefs_page' page_obj.next_page_number %}">
+                        <i class="ti-angle-right"></i>
+                    </a>
+                </li>
+                {% endif %}
+
+            </ul>
+        </nav>
+
+    </div>
+</section>
+<!--::chefs_part end::-->
+
+<!-- intro_video_bg start-->
+<section class="intro_video_bg">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="intro_video_iner text-center">
+                    <h2>Expect The Best</h2>
+                    <div class="intro_video_icon">
+                        <a id="play-video_1" class="video-play-button popup-youtube"
+                           href="https://www.youtube.com/watch?v=pBFQdxA-apI">
+                            <span class="ti-control-play"></span>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- intro_video_bg part start-->
+    </div>
+</section>
+<!-- intro_video_bg part start-->
 
 {% endblock %}
