--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,21 @@
 <body>
 {% include 'partials/header.html' %}
 {% block content %}
+
 {% endblock %}
 {% include 'partials/footer.html' %}
+{% if messages %}
+    <div class="messages mb-3">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
 
 
 <!-- JS Files -->
